add another official example (which may be used as consumer or producer)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ conan_basic_setup()
 
 add_executable(kafkademo
   kafkademo.cpp)
-
 target_link_libraries(kafkademo ${CONAN_LIBS})
+
+add_executable(kafkafulldemo
+  kafkafulldemo.cpp)
+target_link_libraries(kafkafulldemo ${CONAN_LIBS})
